Improved the dbus configuration.
Signed-off-by: Hermann Mayer <hermann.mayer92@gmail.com>

--- a/7.9/Dockerfile
+++ b/7.9/Dockerfile
@@ -13,9 +13,9 @@ RUN yum install -y epel-release && \
   yum install -y \
     dbus avahi avahi-tools nss-mdns haproxy supervisor
 
-# Copy avahi.sh
-COPY config/avahi.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/avahi.sh
+# Copy custom scripts
+COPY config/*.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/*
 
 # Configure haproxy
 COPY config/haproxy.conf /etc/haproxy/haproxy.cfg
