--- a/config/supervisor/elasticsearch.ini
+++ b/config/supervisor/elasticsearch.ini
@@ -1,7 +1,7 @@
 [program:elasticsearch]
 priority=20
 directory=/tmp
-command=/docker-entrypoint.sh elasticsearch
+command=/usr/local/bin/docker-entrypoint.sh eswrapper
 user=root
 autostart=true
 autorestart=true
