--- a/7.10/Dockerfile
+++ b/7.10/Dockerfile
@@ -1,5 +1,5 @@
 FROM elasticsearch:7.10.1
-MAINTAINER Hermann Mayer "hermann.mayer@hausgold.de"
+LABEL org.opencontainers.image.authors="containers@hausgold.de"
 
 # You can change this environment variable on run's with -e
 ENV MDNS_HOSTNAME=elasticsearch.local
@@ -33,4 +33,4 @@ COPY config/haproxy.conf /etc/haproxy/haproxy.cfg
 COPY config/supervisor/* /etc/supervisord.d/
 
 # Define the command to run per default
-CMD /usr/bin/supervisord -nc /etc/supervisord.conf
+CMD ["/usr/bin/supervisord", "-nc", "/etc/supervisord.conf"]
